# qontinui-supervisor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  build.rs
.cargo/: config.toml
.dev-logs/: eval-benchmark.db  eval-benchmark.db-shm  eval-benchmark.db-wal  velocity.db  velocity.db-shm  velocity.db-wal
.github/workflows/: ci.yml  qontinui-ci.yml  spec-pairing.yml
.qontinui/: config.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/specs/pages/dashboard/: notes.md  spec.uibridge.json  state-machine.derived.json
frontend/specs/pages/runner-monitor/: notes.md  spec.uibridge.json  state-machine.derived.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BootIdWatcher.tsx  BuildRefreshBanner.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  RunnerStatusBadge.tsx  SessionChip.tsx  SmallBtn.tsx  StatusDot.test.tsx  StatusDot.tsx  Toast.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.test.ts  api.ts
frontend/src/pages/: Dashboard.test.tsx  Dashboard.tsx  EvalRunDetail.tsx  Evaluation.tsx  Fleet.tsx  Lineage.tsx  RunnerMonitor.tsx  RunnerWatchdogBadge.test.tsx  SpawnMonitors.tsx  Velocity.tsx  VelocityCompare.tsx  VelocityEndpoint.tsx  VelocityImprovement.tsx  VelocityTest.tsx  VelocityTrace.tsx  WorkflowLoop.tsx
frontend/src/specs/: dashboard.spec.uibridge.json  runner-monitor.spec.uibridge.json
scripts/: analyze_eval.py  restart-supervisor.ps1  seed_check_generation_rules.py  seed_check_ground_truth.py  seed_eval_prompts.sh  seed_ground_truth.sh  seed_gt_workflows_to_runner.py  seed_ui_bridge_ground_truth.py  seed_uibridge_prompts.sh  update_generation_rules_3types.py
src/: ai_debug.rs  bazel_remote.rs  build_monitor.rs  build_submissions.rs  cache_key.rs  cache_telemetry.rs  ci_runner_lifecycle.rs  ci_runner_probe.rs  code_activity.rs  config.rs  coord_reporter.rs  database.rs  diagnostics.rs  discovery.rs  error.rs  expo.rs  fleet.rs  flywheel.rs  footprint.rs  fs_atomic.rs  git_provenance.rs  health_advertiser.rs  health_cache.rs  lib.rs  log_capture.rs  machine_id.rs  main.rs  otel.rs  overnight_watchdog.rs  pii_scrub.rs  reapi.rs  sdk_features.rs  server.rs  settings.rs  smart_rebuild.rs  spawn_worktree.rs  state.rs  trace_propagation.rs  velocity_improvement.rs  velocity_layer.rs  (+4 more)
src/dev_action/: attribution.rs  expectations.rs  ingest.rs  mock.rs  mod.rs  policy.rs  record.rs  states.rs
src/evaluation/: db.rs  engine.rs  judge.rs  mod.rs  queries.rs
src/process/: early_log.rs  env_forwarders.rs  guarded_command.rs  health_probe.rs  job.rs  manager.rs  mod.rs  orphan_scan.rs  panic_log.rs  port.rs  proc_kill.rs  restate_port.rs  stopped_cache.rs  unix_kill.rs  windows.rs
src/routes/: ai.rs  build_submit.rs  cascade.rs  ci_runner.rs  dashboard.rs  dev_action.rs  dev_endpoints.rs  dev_start.rs  diagnostics.rs  evaluation.rs  expo.rs  graphql_proxy.rs  health.rs  lineage.rs  lkg_coverage.rs  logs.rs  mod.rs  monitors.rs  runner.rs  runner_monitor.rs  runners.rs  runners_pair.rs  smart_rebuild.rs  supervisor_bridge.rs  ui_bridge.rs  velocity.rs  velocity_improvement.rs  velocity_tests.rs  web_fleet.rs  workflow_loop.rs  ws.rs
src/spec_api/: events.rs  handlers.rs  mod.rs  projection.rs  responses.rs  storage.rs  tests.rs  types.rs
src/symbol_watcher/: coord_client.rs  diff.rs  file_watch.rs  mod.rs  tests.rs  tree_sitter_extract.rs
src/velocity/: db.rs  ingest.rs  mod.rs  queries.rs
src/velocity_tests/: db.rs  engine.rs  mod.rs  tests.rs
static/: dashboard.html
tests/: auth_pattern_regex.rs  build_pool_integration.rs  config_test.rs  footprint_test.rs  help_endpoint.rs  live_fixture_smoke.rs  lkg_coverage_integration.rs  orphan_kill_unix.rs  panic_catcher.rs  row10_cache_synthetic.rs  settings_test.rs  spawn_test_build_result.rs  state_test.rs  test_pair_with_token.rs  workflow_loop_test.rs
tests/fixtures/: compose_parity.json
