[package]
name = "qontinui-supervisor"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "qontinui-supervisor"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
regex = "1"
socket2 = "0.6"
glob = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
qontinui-types = { path = "../qontinui-schemas/rust" }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
# Minimal embedded WebView2 window for the ambient dashboard tab. Same versions
# as Tauri 2.5 transitively pins in the runner (see qontinui-runner/Cargo.lock).
# Windows-only: the supervisor never targets anything else.
wry = "0.54"
tao = "0.34"
