[package]
name = "qontinui-supervisor"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "qontinui-supervisor"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "catch-panic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
regex = "1"
socket2 = "0.6"
glob = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
qontinui-types = { path = "../qontinui-schemas/rust", version = "^0.1.2" }
qontinui-runner-client = { path = "../qontinui-schemas/rust-runner-client", version = "^0.1.1" }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile = "3"
# `oneshot` extension trait for driving an axum::Router in unit tests
# without binding a real socket. tower 0.5 is already pulled in
# transitively by axum 0.8 / tower-http; declaring it explicitly here just
# unlocks the dev-only `util::ServiceExt` import. Used by the synthetic
# build-id injection endpoint tests and by the spec_api tests.
tower = { version = "0.5", features = ["util"] }
# Used by spec_api tests for env-override scoping (matches runner's spec_api
# test dependencies).
scopeguard = "1.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
# Minimal embedded WebView2 window for the ambient dashboard tab. Same versions
# as Tauri 2.5 transitively pins in the runner (see qontinui-runner/Cargo.lock).
# Windows-only: the supervisor never targets anything else.
wry = "0.54"
tao = "0.34"
