[package]
name = "qontinui-supervisor"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "qontinui-supervisor"
path = "src/main.rs"

# Phase 4.1 (`plans/2026-05-21-coordination-improvements.md`): per-machine
# tree-sitter symbol watcher daemon. Separate from the supervisor binary so
# operators can run it independently (no `--project-dir` required) and so
# the supervisor isn't forced to link tree-sitter grammars when only the
# watcher needs them.
[[bin]]
name = "qontinui-symbol-watcher"
path = "src/bin/symbol_watcher.rs"

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
# CancellationToken for build cancellation (per-slot cancel of an in-flight
# `GuardedCommand::run`). `rt` is the feature gate for the sync primitives.
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors", "trace", "catch-panic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
regex = "1"
socket2 = "0.6"
glob = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
qontinui-types = { path = "../qontinui-schemas/rust", version = ">=0.1.2, <2.0.0" }
qontinui-runner-client = { path = "../qontinui-schemas/rust-runner-client", version = ">=0.1.1, <2.0.0" }
# Row 2 Phase 1 (fleet topology): used by `fleet::detect_resources` to
# report CPU/RAM/disk + build-slot capacity on startup. `system` is
# already enabled; `disk` adds the per-mountpoint enumerator we need
# for `disk_total_gb`.
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }
url = "2"
# Row 10 Items 5-7 — content-addressed build cache. sha256 for the
# canonical-diff cache key + artifact CAS digests; hex for wire encoding.
sha2 = "0.10"
hex = "0.4"
bytes = "1"

# Row 9 Phase 5 — OpenTelemetry distributed tracing. Versions match
# the runner's pin (`qontinui-runner/src-tauri/Cargo.toml`) and coord's
# (`../qontinui-coord/Cargo.toml`) so any shared instrumentation crate
# can use identical types. `grpc-tonic` is the default OTLP transport
# (gRPC :4317 → Jaeger / Tempo / etc.).
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.28"

# --- Phase 4.1 symbol watcher deps ---
# Tree-sitter pinning matches the existing in-tree precedent at
# `.spawn-origin_main/src-tauri/Cargo.toml:157-162`. Bumping these in
# isolation here would risk grammar/parser ABI drift across the codebase
# — keep aligned with the canonical pins. `tree-sitter` 0.24 is the
# series that 0.23-line grammars are compiled against.
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
# Filesystem watcher. notify 8 is the current stable line; 9.x is
# release-candidate as of 2026-05-21.
notify = "8"
# Async trait used by the `CoordTransport` mockability surface. Tiny
# (one proc-macro), already pulled in transitively by parts of the
# supervisor's reqwest stack — declaring it explicitly here makes the
# trait readable.
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
# `oneshot` extension trait for driving an axum::Router in unit tests
# without binding a real socket. tower 0.5 is already pulled in
# transitively by axum 0.8 / tower-http; declaring it explicitly here just
# unlocks the dev-only `util::ServiceExt` import. Used by the synthetic
# build-id injection endpoint tests.
tower = { version = "0.5", features = ["util"] }
# Used for env-override scoping in tests.
scopeguard = "1.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
# Minimal embedded WebView2 window for the ambient dashboard tab. Same versions
# as Tauri 2.5 transitively pins in the runner (see qontinui-runner/Cargo.lock).
# Windows-only: the supervisor never targets anything else.
wry = "0.54"
tao = "0.34"
